# radcad

./: .gitignore  Cargo.toml  README.md  default.nix  derp.py  dist_rename.py  flake.nix  publish  rust-toolchain.toml  setup.py  shell.nix  test.py
add_one/: Cargo.toml  __init__.py
add_one/src/: lib.rs
adder/: __init__.py
adder/src/: main.rs
boolean/: Cargo.toml  __init__.py  core.py  fun_tools.py  polydata.py
boolean/src/: lib.rs
concave/src/: lib.rs
draft/: Cargo.toml  core.py  polydata.py
draft/src/: lib.rs
examples/: co_planar.py  concave.py  cube_sphere.py  draft.py  helper.py  pot_holes.py  requirements.txt  spheres.py  spheres_bench.py
hello/: default.nix  setup.py
whitepapers/: _index.md
